logs/dag_id=weather_dag_api/run_id=manual__2023-04-26T13:27:03.589348+00:00/task_id=insert_data/attempt=1.log
[2023-04-26T13:27:27.112+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.insert_data manual__2023-04-26T13:27:03.589348+00:00 [queued]>
[2023-04-26T13:27:27.172+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.insert_data manual__2023-04-26T13:27:03.589348+00:00 [queued]>
[2023-04-26T13:27:27.174+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T13:27:27.175+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-26T13:27:27.176+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T13:27:27.234+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): insert_data> on 2023-04-26 13:27:03.589348+00:00
[2023-04-26T13:27:27.245+0000] {standard_task_runner.py:55} INFO - Started process 240 to run task
[2023-04-26T13:27:27.318+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'insert_data', 'manual__2023-04-26T13:27:03.589348+00:00', '--job-id', '14', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmptc8o3l6p']
[2023-04-26T13:27:27.324+0000] {standard_task_runner.py:83} INFO - Job 14: Subtask insert_data
[2023-04-26T13:27:27.558+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.insert_data manual__2023-04-26T13:27:03.589348+00:00 [running]> on host d48b88797b3b
[2023-04-26T13:27:27.835+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2023-04-26T13:27:03.589348+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-26T13:27:03.589348+00:00
[2023-04-26T13:27:27.838+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed)
		VALUES (2023-04-25T10:20:00Z,
		15.1,
		0.0,
		2.0);
[2023-04-26T13:27:27.862+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T13:27:28.634+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T13:27:28.642+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed)
		VALUES (2023-04-25T10:20:00Z,
		15.1,
		0.0,
		2.0);, parameters: None
[2023-04-26T13:27:28.645+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "T10"
LINE 2:   VALUES (2023-04-25T10:20:00Z,
                            ^

[2023-04-26T13:27:28.678+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=insert_data, execution_date=20230426T132703, start_date=20230426T132727, end_date=20230426T132728
[2023-04-26T13:27:28.719+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 14 for task insert_data (syntax error at or near "T10"
LINE 2:   VALUES (2023-04-25T10:20:00Z,
                            ^
; 240)
[2023-04-26T13:27:28.771+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-26T13:27:28.829+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
